added radio button group with fieldset with legend nested under fieldset

--- a/form/text_field.html
+++ b/form/text_field.html
@@ -3,6 +3,15 @@
     <legend>A Form To take your input</legend>
 
     <label for="text_field">text input here:</label>
-    <input id="text_field"/>
+    <input name="text_field" />
+
+    <fieldset>
+      <legend>A Form To take your input</legend>
+
+      <label for="text_field">text input here:</label>
+      <input name="text_field" />
+
+    </fieldset>
+
   </fieldset>
 </form>
